name:          dfinity-crypto
version:       0.0.0
synopsis:      DFINITY crypto library.
license:       GPL-3
license-file:  LICENSE
copyright:     2017-2018 DFINITY Stiftung
author:        Ben Lynn <blynn@dfinity.org>
maintainer:    Enzo Haussecker <enzo@dfinity.org>
stability:     Experimental
category:      DFINITY, Crypto
homepage:      https://github.com/dfinity/hs-dfinity-crypto
bug-reports:   https://github.com/dfinity/hs-dfinity-crypto/issues
build-type:    Simple
cabal-version: >=1.10

library
   build-depends:
      base,
      binary,
      bindings-DSL,
      bytestring,
      hashable,
      hex,
      containers
   c-sources:
      cbits/hs-bls.c
   cc-options:
      -fPIC
   default-extensions:
      DeriveGeneric
      GeneralizedNewtypeDeriving
   default-language:
      Haskell2010
   exposed-modules:
      Crypto.BLS
   extra-libraries:
      bls384
      gmpxx
      mcl
      crypto
      stdc++
   ghc-options:
      -O2
      -Wall
      -fno-warn-unused-top-binds
   hs-source-dirs:
      src

test-suite bls-unit-tests
   build-depends:
      HUnit,
      QuickCheck,
      base,
      binary,
      bindings-DSL,
      bytestring,
      containers,
      cryptohash-sha256,
      hashable,
      hex,
      mwc-random,
      random-shuffle,
      vector
   c-sources:
      cbits/hs-bls.c
   cc-options:
      -fPIC
   default-extensions:
      DeriveGeneric
      GeneralizedNewtypeDeriving
      RecordWildCards
   default-language:
      Haskell2010
   extra-libraries:
      bls384
      gmpxx
      mcl
      crypto
      stdc++
   ghc-options:
      -O2
      -Wall
      -fno-warn-orphans
      -fno-warn-unused-top-binds
   hs-source-dirs:
      src,
      test
   main-is:
      Test.hs
   other-modules:
      Crypto.BLS
   type:
      exitcode-stdio-1.0
